# codebook-backend

./: .dockerignore  .env.example  .gitignore  .replit  API.md  ARCHITECTURE.md  CLAUDE.md  DATA_MODEL.md  Dockerfile  ERRORS.md  OPERATIONS.md  PROMPT_BACKEND.md  README.md  SECURITY.md  SPEC.md  TASKS.md  main.py  package-lock.json  pyproject.toml  replit.md  requirements.txt  schema.sql
.claude/: settings.local.json
.github/workflows/: ci.yml
samples/: test_materials.csv
src/: __init__.py
src/api/dependencies/: __init__.py  auth.py
src/api/routes/: auth.py  clients.py  codebooks.py  health.py  jobs.py  versions.py
src/core/: config.py  errors.py  logging_config.py
src/models/: audit.py  client.py  codebook.py  codebook_item.py  embedding.py  job.py  llm_usage.py  prompt_template.py  recommendation.py  rule.py  version.py
src/repositories/: audit_log.py  clients.py  codebook_items.py  codebook_recommendations.py  codebook_rules.py  codebook_versions.py  codebooks.py  embeddings.py  jobs.py  llm_usage.py  prompt_templates.py
src/services/: codebook_processor.py  csv_parser.py  database.py  llm.py
tests/: conftest.py
tests/integration/: test_main.py
tests/unit/api/: test_auth.py
tests/unit/core/: test_config.py  test_errors.py
tests/unit/models/: test_client.py
tests/unit/repositories/: test_clients.py
